# quantum-pde

./: CMakeLists.txt  README.md  compile.sh
checkpoints/: solver_data.json  state_10.txt  state_2.txt  state_3.txt  state_4.txt  state_5.txt  state_6.txt  state_9.txt
docs/: design.md  implementation.md
include/solver/: solver.hh  tensor.hh
python/: visualize_results.py
scripts/: run_all.sh
src/: main  main.cc  solver.cc  tensor_network.cc
tests/: CMakeLists.txt  test_eigen.cc  test_solver.cc
